server/compilers/goLiteJS/src/test/ml1/valid/if1.go
// if statement support
package main

func main() {
    if exp {

    }

    if exp {

    } else {

    }

    if exp1 {

    } else if exp2 {

    } else {

    }
}
