server/compilers/goLiteJS/src/test/ml1/invalid/cont1.go
// continue outside loop
package main

func main(){
    continue
}
